sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:11: error: ':' expected but ',' found.
def placePlayer(base, position) {
                    ^SelectBaseball:86: error: identifier expected but '}' found.
}
^